# cairn

./: .env.example  .gitignore  CLAUDE.md  Caddyfile.example  DEPLOYMENT.md  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  config.example.yaml  docker-compose.example.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_deep_verify.py  0003_app_settings.py  0004_ack_informational_events.py  0005_rename_detection.py  0006_typed_progress_runs.py  0007_interrupted_run_result.py  0008_one_running_run_per_corpus.py  0009_rename_corpus_to_collection.py  0010_auto_baseline_new.py
docs/design/: Cairn Panel.html  README.md
docs/design/cairn/: app.jsx  components.jsx  data.js  icons.jsx  page-corpus.jsx  page-dashboard.jsx  page-settings.jsx  page-verify.jsx  shell.jsx  theme.css
openspec/changes/tolerate-unstampable-proof-paths/: design.md  proposal.md  tasks.md
openspec/specs/alerting/: spec.md
openspec/specs/app-runtime/: spec.md
openspec/specs/configuration/: spec.md
src/: __init__.py  cli.py  config.py  csrf.py  database.py  main.py
src/control_panel/: routes.py
src/models/: db.py
src/notify/: base.py  dispatch.py  kuma_push.py  ntfy.py  signal_callmebot.py  smtp.py  webhook.py
src/services/: app_settings.py  collections.py  manifest.py  ots.py  proofs.py  scanner.py  scheduler.py
tests/: test_folder_tree_and_progress.py  test_foundation_smoke.py  test_manifest.py  test_notify.py  test_ots.py  test_panel.py  test_scanner.py  test_scheduler.py
(+136 files in other folders)
