[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cairn-integrity"
version = "0.1.0"
description = "Self-hosted file-integrity monitor + OpenTimestamps notary with a web panel"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Max Kuminov" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0.29",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "passlib[bcrypt]>=1.7.4",
    "itsdangerous>=2.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "opentimestamps-client>=0.7.2",
]

[project.scripts]
cairn = "src.cli:main"

[tool.setuptools]
packages = [
    "src",
    "src.models",
    "src.services",
    "src.notify",
    "src.witness",
    "src.auth",
    "src.api",
    "src.control_panel",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
